--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,5 +1,6 @@
 <h1>Results Page</h1>
 
 <%data.Search.forEach((movie)=>{%>
-    <li><%=movie.Title%></li>
+    <li><%=movie.Title%> - <%=movie.Year%></li>
 <%});%>
+<a href="/">Search Again</a>
